turtleart.lessons.turtleart.Main.Square.scala.error
Source:4: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
droite()
      ^Source:6: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
droite()
      ^Source:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
droite()
      ^Source:9: error: not found: value avace
avace(200)
^Source:10: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
droite()
      ^