turtleart.lessons.turtleart.Main.Square.scala.code
override def run() {
avance(200)
droite()
avance(200)
droite()
avance(200)
droite()
avace(200)
droite()
}
